--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,47 @@
-<h1>Laurel Cerrato</h1>
+<body>
+    <main>
+
+    <div main-image>
+        <h1>Welcome to CSE Motors!</h1>
+        <img src="/public/images/vehicles/delorean-tn.jpg" alt="delorean">
+    <div id="dmc-box">
+        DMC Dekorean <br>
+        3 cup holders <br>
+        Superman doors <br>
+        Fuzzy dicel <br>
+        <img src="/public/images/site/own_today.png" alt="Own Today">
+    </div>
+    </div>
+        
+
+    <div id="dmc-reviews">
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling Mcfly!." (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it." (5/5)</li>
+        </ul>
+    </div>
+
+    <div id="updates-grid">
+        <div class="grid-item">
+            <img src="/public/images/upgrades/flux-cap.png" alt="Flux capacitor">
+            <p><a href="/views/index.ejs">Flux Capacitor</a></p>
+        </div>
+        <div class="grid-item">
+            <img src="/public/images/upgrades/flame.jpg" alt="Flame decals">
+            <p><a href="/views/index.ejs">Flame Decals</a></p>
+        </div>
+        <div class="grid-item">
+            <img src="/public/images/upgrades/bumper_sticker.jpg" alt="Bumper stickers">
+            <p><a href="/views/index.ejs">Bumper Stickers</a></p>
+        </div>
+        <div class="grid-item">
+            <img src="/public/images/upgrades/hub-cap.jpg" alt="Hub Caps">
+            <p><a href="/views/index.ejs">Hub Caps</a></p>
+        </div>
+
+    </div>
+    </main>
+</body>
